--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mui/material": "^7.3.4",
     "aos": "^2.3.4",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
