--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
