--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "aos": "^2.3.4",
